--- a/Css/industries.css
+++ b/Css/industries.css
@@ -1,3 +1,34 @@
 .industries_content{
-   padding: 180px;
+   margin: 115px 0 50px;
+   /* background-image: linear-gradient(45deg, #ffffff2e, #000000c4), url(../assests/b2b/bannerB2b.svg); */
+   /* background-image: url('../assests/b2b/bannerB2b.svg'); */
+   background-image: linear-gradient(59deg, #ffffffa3, #00000042), url('../assests/industries/industriesbanner-removebg-preview.png');
+   height: 400px;
+   background-repeat: no-repeat;
+   background-position: right;
+   background-size: contain;
+   /* margin: 30px 0; */
+}
+.industries_info{
+   border: 1px solid grey;
+   padding: 60px 40px;
+   border-radius: 3%;
+}
+.industries_img img{
+   height: 100px;
+   width: 100px;
+   border: 1px solid #ccc;
+   border-radius: 50%;
+   padding: 10px;
+   margin: 6px 2px;
+}
+.industries_info:hover{
+   box-shadow: 1px 5px 15px orange;
+}
+.industries_info:hover .industries_img img{
+   background-color: bisque;
+}
+.industries_info:hover .industries_data h5{
+color:orange;
+font-weight: 800;
 }
