--- a/Css/Style.css
+++ b/Css/Style.css
@@ -30,17 +30,26 @@ html {
     border-top: 1px solid #F19300; */
     box-shadow: 0 7px 10px #f1930066;
 }
+
 /* logo section */
 .logo{
     width: 175px;
     height: 111px;
 }
+.mobile_header{
+    background: rgba(255,255,255,90%);
+    box-shadow: 0 7px 10px #f1930066;
+}
+.fa-bars:before{
+    font-size: 25px;
+    /* border: 1px solid #ccc; */
+    padding: 4px;
+    /* border-radius: 3px; */
+}
 
 /* navigation section */
 
-.navigation .nav-item{
-    padding: 0 5px;
-}
+
 .navigation a{
     font-size: 18px;
     color: black;
@@ -57,6 +66,35 @@ html {
     color:#e77606;
     
 }
+.mobile_header .offcanvas-header{
+    visibility: visible;
+	z-index: 9999;
+	background-color:#ccc;
+   
+}
+.mobile_header .offcanvas-body{
+	visibility: visible;
+	z-index: 9999;
+	background-color:white;
+    color:#e77606;
+    margin: 0 0 50px 0;
+    /* border-radius: 6px; */
+ }
+ .mobile_header .offcanvas-end{
+    width: 490px;
+    /* height: 460px; */
+ }
+.fa-bars:before {
+    content: "\f0c9";
+    /* padding-left: 5px; */
+}
+.mobile_header .nav-item a{
+    color: black;
+    font-weight: 600;
+    padding: 15px 0;
+}
+
+ 
 
 /* Getstarted section */
 .btn-outline-success.getstarted{
@@ -84,7 +122,7 @@ html {
 }
 .banner_left{
     
-    padding: 202px 0 100px 65px;;
+    padding: 202px 0 100px 60px;
 }
 .banner_left h2{
  font-size: 51px;
@@ -107,7 +145,7 @@ html {
 .subbanner_section{
     position: absolute;
     /* bottom: 0; */
-    top: 730px;
+    top: 690px;
     left: 0;
     right: 0;
     z-index: 1;
@@ -148,9 +186,9 @@ html {
 /* about services */
 .solutions_section{
     position: relative;
- padding-top:180px;
+    padding-top:180px;
  /* background-color: #ccc;  */
- background-color: #edd8b16b; 
+    background-color: #edd8b16b; 
 }
 
 .solutions_subcontent_right img{
