--- a/Css/Style.css
+++ b/Css/Style.css
@@ -145,7 +145,7 @@ html {
 .subbanner_section{
     position: absolute;
     /* bottom: 0; */
-    top: 690px;
+    top: 720px;
     left: 0;
     right: 0;
     z-index: 1;
@@ -170,6 +170,7 @@ html {
    
     
 }
+
 .subbanner_div:hover{
     box-shadow: 0 -3px 12px #e77606;
     /* transform: translateY(-20px); */
@@ -336,8 +337,10 @@ color: white;
     width:100px;
     height: 100px;
 }
-.subclients img{
-    padding: 20px;
+.client_carouselSize img{
+    padding: 40px 20px;
+    display: inline-block;
+   
 }
 
 /* customer section */
@@ -565,60 +568,6 @@ textarea.form_control{
     font-weight: 600;
 }
 
-/* b2b page */
-
-.b2b_banner{
-        margin: 115px 0 50px;
-        /* background-image: linear-gradient(45deg, #ffffff2e, #000000c4), url(../assests/b2b/bannerB2b.svg); */
-        /* background-image: url('../assests/b2b/bannerB2b.svg'); */
-        background-image: linear-gradient(59deg, #ffffffa3, #00000042), url(../assests/b2b/bannerB2b.svg);
-        height: 400px;
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: cover;
-        /* margin: 30px 0; */
-    
-}
-.b2b_banner img{
-    opacity: 2;
-}
-.b2bcontent{
-    padding:85px 30px;
-}
-.b2bcontent h2{
-    font-size: 45px;
-    color: #e77606;
-    font-weight: 700;
-}
-.b2bcontent p{
-    font-size: 20px;
-    line-height: 30px;
-
-}
-.b2b_info{
-    padding: 50px 0;
-}
-.b2b_info_right{
-    padding: 50px 0;
-}
-.b2b_info_right h2{
-    font-size: 30px;
-    color: #e77606;
-}
-b2b_info_left{
-    /* padding: 120px 0; */
-}
-.b2b_info_right p{
-    font-size: 17px;
-    line-height: 40px;
-    letter-spacing: 3px;
-    color: #615e5b;
-}
-.b2b_info img{
-    width: 100%;
-    height: auto;
-    padding: 40px ;
-}
 
 /* b2b2c page */
 .b2b2c_banner{
