--- a/Css/b2b.css
+++ b/Css/b2b.css
@@ -5,11 +5,11 @@
     margin: 115px 0 50px;
     /* background-image: linear-gradient(45deg, #ffffff2e, #000000c4), url(../assests/b2b/bannerB2b.svg); */
     /* background-image: url('../assests/b2b/bannerB2b.svg'); */
-    background-image: linear-gradient(59deg, #ffffffa3, #00000042), url(../assests/b2b/bannerB2b.svg);
+    background-image: linear-gradient(59deg, #ffffffa3, #00000042), url('../assests/b2b/b2b_bg-removebg-preview.png');
     height: 400px;
     background-repeat: no-repeat;
     background-position: right;
-    background-size: cover;
+    /* background-size: cover; */
     /* margin: 30px 0; */
 
 }
